# cadence

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/instructions/: architecture.md  configuration.md  testing-and-linting.md
.github/workflows/: ci.yml
designs/completed/: 2026-04-16-rlx-v01-mode-plan.md  2026-04-18-add-timestamps-to-all-logger-output.md  2026-04-25-improve-default-prompt-loading-error-reporting.md
docs/: config.md  executor.md  git-and-plans.md  processor.md  progress-and-input.md
docs/plans/completed/: 2026-04-16-rlx-v01-mode-plan.md  2026-04-17-fix-show-progress-rlx-plan.md  2026-04-18-remove-draft-review-add-impl-flag.md  2026-04-30-config-flag-yaml-overrides.md  2026-04-30-impl-flag-auto-execute.md  2026-04-30-remove-documentation-review-agent.md
docs/reference/: 01-architecture.md  02-config.md  03-cli.md  04-processor.md  05-executors.md  06-git-and-plans.md  07-web-and-io.md  08-prompts.md  09-agents.md  10-features.md  README.md
src/cadence/: cli.py  config.py  hooks.py  input.py  status.py  templates.py  usage.py
src/cadence/cli_commands/: _shared.py  auto.py  chain.py  doctor.py  init.py  plan.py  report.py  review.py  squash.py  status.py  task.py
src/cadence/diagnostics/: doctor.py  status.py
src/cadence/executor/: claude_executor.py  events.py  process_group.py
src/cadence/git/: __init__.py  backend.py  service.py
src/cadence/plan/: __init__.py  parse.py  (+1 more)
src/rlx/: cli.py  config.py  git.py  input.py  status.py
tasks/0001-docs/: 1-initial-prompt.md
tasks/0002-v01/: 0002-v01-implementation-prompt.md  0002-v01-inprovements-prompt.md
tasks/0003-v02/: 0003-v02-implementation-prompt-plan.md  0003-v02-implementation-prompt.md
tasks/0004-v03/: 0004-v03-implementation-prompt.md
tasks/0005-review-flags/: 0005-review-flags-implementation-plan.md  0005-review-flags-implementation-prompt.md
tasks/0006-no-docs-step/: 0006-no-docs-step-plan.md  preprompt
tasks/0007-impl-flag/: plan  preprompt
tasks/0008-settings/: plan  preprompt
tasks/0009-no-commit/: plan  preprompt
tasks/0010-implementation-limit/: plan  plan-completed  preprompt
tests/: test_agents.py  test_cli.py  test_config.py  test_diagnostics_doctor.py  test_diagnostics_status.py  test_events.py  test_executor.py  test_git.py  test_git_service.py  test_hooks.py  test_input.py  test_partial_line.py  test_plan.py  test_processor.py  test_progress.py  test_progress_events.py  test_prompts.py  test_reporter.py  test_signals.py  test_status.py  test_templates.py  test_usage.py  test_watchdog.py
(+43 files in other folders)
