[project]
name = "cadence"
dynamic = ["version"]
description = "CLI tool for autonomous task execution via Claude Code"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "PyYAML>=6.0",
]

[project.scripts]
cadence = "cadence.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "src/cadence/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.14"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
