[project]
name = "cadence-runner"
dynamic = ["version"]
description = "CLI tool for autonomous task execution via Claude Code"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mikhail Drozdetskiy", email = "m.drozdetskiy@gmail.com" },
]
keywords = ["claude", "claude-code", "cli", "automation", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Drozdetskiy/cadence"
Repository = "https://github.com/Drozdetskiy/cadence"
Issues = "https://github.com/Drozdetskiy/cadence/issues"

[project.scripts]
cadence = "cadence.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "src/cadence/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.14"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
